# carpricepredictor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py  schemas.py
api/routers/: evaluate.py  notebooks.py  predict.py  setup.py  status.py
frontend/: app.js  index.html  style.css
models/: feature_columns.json
notebooks/: evaluation.ipynb  features.ipynb  initial_eda.ipynb  training.ipynb
src/: data.py  evaluate.py  features.py  pipeline.py  predict.py  train.py
